--- a/labs/sol_lab1.Rmd
+++ b/labs/sol_lab1.Rmd
@@ -198,7 +198,7 @@ spin <- function(){
 
 Y la función `compute_gain()`
 ```{r}
-red   <- c(1,3,7,9,19,21,23,25,27,12,14,16,18,30,32,34,36)
+red   <- c(32, 19, 21, 25, 34, 27, 36, 30, 23, 5, 16, 1, 14, 9, 18, 7, 12, 3)
 black <- c(2,4,6,8,20,22,24,26,28,11,13,15,17,29,31,33,35)
 
 compute_gain <- function(q=10){
