--- a/labs/lab3.Rmd
+++ b/labs/lab3.Rmd
@@ -102,15 +102,36 @@ Los niveles de esta variable han de ser
 
 Ordena las distintas etnias en orden decreciente de proporción de fumadores en la muestra. Excluye aquellas observaciones con etnia desconocida o no declarada.
 
-
 ## Ejercicio 8
+
+Reproduce el siguiente gráfico. Extrae alguna conclusión.
+
+
+```{r, echo=F, warning=F}
+fumar %>% mutate(decada=case_when(age<=20 ~"0-20",
+                    age>20 & age<=30 ~ "20-30",
+                    age>30 & age<=40 ~ "30-40",
+                    age>40 & age<=50 ~ "40-50",
+                    age>50 & age<=60 ~ "50-60",
+                    age>60 & age<=70 ~ "60-70",
+                    age>70 & age<=80 ~ "70-80",
+                    age>80 & age<=90 ~ "80-90",
+                    TRUE ~ "90-")) %>% 
+  filter(smoke == "Yes") %>% 
+  group_by(decada, gender) %>%
+  summarise(median_we = median(amt_weekdays)) %>% 
+  ggplot(aes(x=decada, y=median_we)) + geom_bar(stat="identity", fill="#D55E00") + 
+  facet_wrap(gender~.) + theme_minimal() + labs(x="Década", y="Mediana de Cigarrillos/Día entre semana")
+```
+
+## Ejercicio 9
 
 ¿Qué tipos de tabaco son más populares en las distintas franjas de salario bruto? ¿Y en las distintas franjas de edad?
 
 *Nota*: utiliza la variable decada creada anteriormente
 
 
-## Ejercicio 9
+## Ejercicio 10
 
 ¿Cuál es la diferencia entre estos dos códigos?
 
@@ -124,12 +145,12 @@ fumar %>% group_by(gender, smoke) %>% summarise(n=n()) %>%
 ```
 
 
-## Ejercicio 10
+## Ejercicio 11
 
 ¿Entre la gente que no está casada, cuántos cigarros/día entre semana se fuman de media por nivel de estudios?
 
 
-## Ejercicio 11
+## Ejercicio 12
 
 En numerosas ocasiones, ante la presencia de valores ausentes, es útil substituírlos
 por un valor. A este proceso se le conoce como imputación.
