--- a/tema4/tema4.Rmd
+++ b/tema4/tema4.Rmd
@@ -225,7 +225,6 @@ Un modelo estadístico es un modelo matemático que incorpora un conjunto de sup
 
 * Los modelos suelen ser paramétricos: d: $\mathcal {P}=\{F_{\theta }:\theta \in \Theta \}$
 
-
 * Dados unos datos, el objetivo es encontrar el valor de $\theta$ que mejor se ajusta a los datos.
 
 
@@ -261,6 +260,26 @@ $$
 
 * ¿Cuáles son los parámetros de este modelo?
 
+
+---
+## ¿Qué son los modelos estadísticos?
+
+$$
+\mathcal{P} = \{y \sim \mathcal{N}(\beta_0 + \beta_1 x, \sigma^2)\}
+$$
+
+El modelo de regresión lineal simple hace, implíctamente, 4 asunciones
+
+1. **Linealidad**: el valor esperado de la variable respuesta corresponde con una función lineal de la covariable.
+
+2. Independencia de los errores.
+
+3. Homocedasticidad: la variance de los errores es constante.
+
+4. Normalidad 
+
+En este curso, no vamos a entrar en el estudio de estas asunciones, pero tened en cuenta que existen.
+
 ---
 ## Regresión lineal simple
 
@@ -286,7 +305,7 @@ knitr::include_graphics("img/box.jpeg")
 
 * **Variables explicativas**: otras variables que desea utilizar para explicar la variación en la respuesta. También llamadas variables independientes, covariables, predictores o *features*. Eje x.
 
-* **Valor predicho**: output del modelo para cierto valor de las covariables.
+* **Valor predicho**: output del **modelo** para cierto valor de las covariables.
 
 ---
 ## Vocabulario
@@ -312,9 +331,9 @@ ggplot(mtcars, aes(x=wt, y=mpg)) + geom_point() + theme_minimal()
 
 * Usaremos un modelo para capturar ese patrón y hacerlo explícito
 
-* Un modelo lineal parece razonable $y = \beta_0 + \beta_1 x + \epsilon$ con $\epsilon \sim \mathcal{N}(0, \sigma^2)$.
+* Un modelo de regresión linea simple parece razonable $y = \beta_0 + \beta_1 x + \epsilon$ con $\epsilon \sim \mathcal{N}(0, \sigma^2)$.
 
-* Vamos a asumir que $\sigma^2$ es conocido.
+* Vamos a asumir que $\sigma^2$ es conocido luego los parámetros de interés son $\hat{\beta}_0$ y $\hat{\beta}_1$.
 
 * Existen infinitos modelos en esta familia
 
@@ -391,7 +410,9 @@ $$
 ---
 ## Regresión lineal
 
-Demostrar que los valores que minimizan la expresión anterior son los estimadores de maximá verosimilitud de $\beta_0$ y $\beta_1$.
+1. Demostrar que los valores que minimizan la expresión anterior son los estimadores de maxima verosimilitud de $\beta_0$ y $\beta_1$.
+
+2. Calcular expresiones para los estimadores de $\beta_0$ y $\beta_1$.
 
 ---
 ## Regresión lineal
@@ -402,7 +423,7 @@ Demostrar que los valores que minimizan la expresión anterior son los estimador
 
 * Así como calcular intervalos de confianza para estos estimadores.
 
-* En este curso no nos centraremos en este aspecto. Únicamente nos centraremos en cómo usar estos modelos para explorar los datos.
+* En este curso no nos centraremos en este aspecto. Únicamente trabajaremos con los estimadores puntuales y nos centraremos en cómo usar estos modelos para explorar los datos.
 
 ---
 ## Regresión lineal - Residuos
@@ -514,7 +535,7 @@ tidy(mod_reg)
 El modelo de regresión lineal es
 
 $$
-\widehat{ \text{mpg} } = \beta_0 + \beta_1 \text{wt}
+\widehat{ \text{mpg} } = \beta_0 + \beta_1 \text{wt}  
 $$
 
 Aumentemos wt en una unidad
@@ -591,9 +612,9 @@ ggplot(teacher, aes(x=years, y=base)) + geom_point() +
 
 * Imaginemos que la $x$ se refiere a género y toma dos valores: masculino y femenino.
 
-* $y = \beta_0 + \beta_1 x$ no tendría sentido, $x$ no es un número!
+* $y = \beta_0 + \beta_1 x + \epsilon$ no tendría sentido, $x$ no es un número!
 
-* Podemos hacer $y = \beta_0 +\beta_1 \text{gen}\_\text{masc}$, donde $\text{gen}\_\text{masc}$ toma valor 1 para hombres y cero para mujeres
+* Podemos hacer $y = \beta_0 +\beta_1 \text{gen}\_\text{masc} + \epsilon$, donde $\text{gen}\_\text{masc}$ toma valor 1 para hombres y cero para mujeres. 
 
 ---
 ## Regresión Lineal: Predictores Categóricos
@@ -662,10 +683,10 @@ Predecimos la media para cada grupo!
 * El modelo lineal más sencillo para este caso, es la **regresión lineal múltiple**
 
 $$
-y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \dots + \beta_p x_p
+y_i = \textbf{x}_i^\top\boldsymbol{\beta} + \epsilon = \beta_{0} + \beta_1 x_{i1} + \beta_2 x_{i2} + \dots + \beta_p x_{ip} + \epsilon
 $$
 
-* El efecto de cada variable se estima independientemente del resto de variables.
+* Los efectos de diferentes covariables sobre el valor esperado de la variable dependiente son aditivos.
 
 ---
 ## Regresión Lineal Múltiple - Interpretación
@@ -673,6 +694,10 @@ $$
 * ¿Cómo se interpreta $\beta_0$? 
 
 * ¿Cómo se interpreta $\beta_1$? 
+
+* ...
+
+* ¿Cómo se interpreta $\beta_p$?
 
 ---
 ## Regresión Lineal Múltiple 
@@ -707,6 +732,13 @@ ggplot(teacher, aes(years, base, colour = degree)) +
   geom_line(data = grid, aes(y = pred)) + theme_minimal()
 
 ```
+
+
+---
+## Regresión Lineal Múltiple
+
+¿Cómo interpretas los coeficientes?
+
 
 ---
 class: center, middle, inverse
